add: implement threeSum method to find unique triplets that sum to zero